# learningSDL

./: README.md
01/: CMakeLists.txt  compile_commands.json
01/.cache/clangd/index/: main.cpp.593F419C3990EE3A.idx
02/: CMakeLists.txt  compile_commands.json  main.cpp
02/.cache/clangd/index/: main.cpp.74177984EF7BB3CA.idx
03/: CMakeLists.txt  compile_commands.json  main.cpp
03/.cache/clangd/index/: main.cpp.DA8691538FDC8232.idx
04/: CMakeLists.txt  compile_commands.json  main.cpp
04/.cache/clangd/index/: main.cpp.9EF9373A4706A5C4.idx
05/: CMakeLists.txt  compile_commands.json  main.cpp
05/.cache/clangd/index/: main.cpp.82208D1735A6367E.idx
template/: main.cpp
template-complete/: CMakeLists.txt  compile_commands.json  rename_project.sh
template-complete/.cache/clangd/index/: main.cpp.E2180E7BF93016FE.idx
template-complete/src/: main.cpp
